--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           otp-version: "27"
           gleam-version: "1.4.0"
+          rebar3-version: "3.23"
       - run: cargo install tomlq
       - run: |
           if [ "v$(tomlq version -f gleam.toml)" == "${{ github.ref_name }}" ]; then
